--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,8 @@ jobs:
             7.0.x
       - name: Restore dependencies
         run: dotnet restore
+      - name: Retore Workload
+        run: dotnet workload restore
       - name: Build and Set Assembly Version
         run: ./build.sh --task=Build --configuration=Release
       - name: Update Version
