--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,8 @@ jobs:
             7.0.x
       - name: Restore dependencies
         run: dotnet restore
+      - name: Retore Workload
+        run: dotnet workload restore
       - name: Build
         run: dotnet build --configuration Release --no-restore
       - name: Test
