--- a/Float.Core/Float.Core.csproj
+++ b/Float.Core/Float.Core.csproj
@@ -11,6 +11,7 @@
     <Title>$(AssemblyName)</Title>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <LangVersion>9.0</LangVersion>
+    <ReleaseVersion>1.0.0</ReleaseVersion>
     <Version></Version>
     <UseMaui>true</UseMaui>
   </PropertyGroup>
