--- a/Float.Core/Float.Core.csproj
+++ b/Float.Core/Float.Core.csproj
@@ -11,9 +11,9 @@
     <Title>$(AssemblyName)</Title>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <LangVersion>9.0</LangVersion>
-    <ReleaseVersion>1.0.0</ReleaseVersion>
     <Version></Version>
     <UseMaui>true</UseMaui>
+    <Configurations>Release;MAUI;Debug</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <AdditionalFiles Include="$(SolutionDir)\stylecop.json" />
@@ -30,6 +30,23 @@
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <DefineConstants>TRACE;RELEASE;</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'MAUI|AnyCPU' ">
+    <IntermediateOutputPath>obj\MAUI</IntermediateOutputPath>
+    <DebugSymbols>true</DebugSymbols>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\MAUI</OutputPath>
+    <DefineConstants>TRACE;DEBUG;MAUI;</DefineConstants>
+    <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\MAUI\Float.Core.xml</DocumentationFile>
+    <NoWarn></NoWarn>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DefineConstants>TRACE;DEBUG;</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Float.TinCan" Version="1.0.3.30" />
