--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,9 +22,7 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build MAUI
-        run: dotnet build --configuration MAUI --no-restore -f net7.0
-      - name: Build Legacy
-        run: dotnet build --configuration MAUI --no-restore -f netstandard2
+        run: dotnet build --configuration MAUI --no-restore
       - name: Test
         run: dotnet test --configuration  MAUI --no-restore -f net7.0 --no-build --verbosity normal --logger:"trx;"
       - name: Publish Test Results
