--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,14 @@ jobs:
         run: dotnet workload restore
       - name: Restore dependencies
         run: dotnet restore
-      - name: Build MAUI
-        run: dotnet build --configuration MAUI --no-restore
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
+      - name: Save Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: bin
+          path: ./Float.Core/bin/Release/Float.Core/
+          retention-days: 5 
       - name: Test
         run: dotnet test --configuration  MAUI --no-restore -f net7.0 --no-build --verbosity normal --logger:"trx;"
       - name: Publish Test Results
