--- a/Float.Core/Float.Core.csproj
+++ b/Float.Core/Float.Core.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2;net7.0;net8.0;</TargetFrameworks>
+    <TargetFrameworks>net7.0;net8.0;</TargetFrameworks>
     <AssemblyName>Float.Core</AssemblyName>
     <AssemblyAuthor>Float</AssemblyAuthor>
     <AssemblyDescription>Common utility code used by Float projects.</AssemblyDescription>
