--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,16 +23,23 @@ jobs:
         run: dotnet workload restore
       - name: Restore dependencies
         run: dotnet restore
+      # This action does a nice job of updating the version, but it does not ensure a valid version format.
       - name: .NET project version updater
         uses: vers-one/dotnet-project-version-updater@v1.7
         with:
-          files: |
+          file: |
             "Float.Core/Float.Core.csproj", "**/*.nuspec", "**/AssemblyInfo.cs"
           version: ${{ github.event.release.name }}
       - name: Build Library
         run: dotnet build ./Float.Core/Float.Core.csproj --configuration Release --no-restore
       - name: Pack and Upload
         run: dotnet pack --configuration Release --no-restore
+      - name: Archive artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Float.Core.${{ github.event.release.name }}.nupkg
+          path: ./Float.Core/bin/Release/Float.Core.${{ github.event.release.name }}.nupkg
+          if-no-files-found: error
       - name: Deploy to NuGet
         env:
           FLOAT_NUGET_TOKEN: ${{ secrets.FLOAT_NUGET_TOKEN }}
