--- a/Float.Core/Float.Core.csproj
+++ b/Float.Core/Float.Core.csproj
@@ -12,7 +12,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <LangVersion>9.0</LangVersion>
     <ReleaseVersion>1.0.0</ReleaseVersion>
-    <Version></Version>
+    <Version>1.0.3</Version>
     <UseMaui>true</UseMaui>
   </PropertyGroup>
   <ItemGroup>
