--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,30 +9,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: |
-            6.0.x
-            7.0.x
-            8.0.x
+          dotnet-version: 9.0.x
       - name: Retore Workload
         run: dotnet workload restore
       - name: Restore dependencies
         run: dotnet restore
-      # This action does a nice job of updating the version, but it does not ensure a valid version format.
-      - name: .NET project version updater
+      - name: Prepare assembly version
+        id: version
+        run: |
+          VERSION=${{ github.event.release.name }}
+          echo "assembly=${VERSION%-*}.${{ github.run_number }}" >> "$GITHUB_OUTPUT"
+      - name: Update project version
         uses: vers-one/dotnet-project-version-updater@v1.7
         with:
-          file: |
-            "Float.Core/Float.Core.csproj", "**/*.nuspec", "**/AssemblyInfo.cs"
+          file: "**/*.csproj"
           version: ${{ github.event.release.name }}
+      - name: Update assembly version
+        uses: vers-one/dotnet-project-version-updater@v1.7
+        with:
+          file: "**/AssemblyInfo.cs"
+          version: ${{ steps.version.outputs.assembly }}
       - name: Build Library
         run: dotnet build ./Float.Core/Float.Core.csproj --configuration Release --no-restore
-      - name: Pack and Upload
+      - name: Pack
         run: dotnet pack --configuration Release --no-restore
       - name: Archive artifact
         uses: actions/upload-artifact@v4
